--- a/requirements/project/templates/index.html
+++ b/requirements/project/templates/index.html
@@ -62,7 +62,7 @@
   </header>
   {{if not .Authenticated}}
   <section class="hero">
-    <h1 class="hero__title">Welcome to the Forum</h1>
+    <h1 class="hero__title">Welcome to the {{.Filter}} Forum</h1>
     <p class="hero__description">Join the conversation. Share your thoughts. Discover amazing </br>discussions from our
       vibrant community.</p>
     <div class="hero__cta">
@@ -72,7 +72,7 @@
   </section>
   {{else}}
   <section class="hero">
-    <h1 class="hero__title">Welcome to the Forum</h1>
+    <h1 class="hero__title">Welcome to the {{.Filter}} Forum</h1>
     <p class="hero__description">Join the conversation. Share your thoughts. Discover amazing </br>discussions from our
       vibrant community.</p>
     <div class="hero__cta">
@@ -82,7 +82,7 @@
   </section>
   {{end}}
   <main class="main-content">
-    <h1 class="main-content__filter-title">{{.Filter}}</h1>
+    <!--<h1 class="main-content__filter-title">{{.Filter}}</h1>-->
     <section class="main-content__posts">
       {{block "content" .Posts}}{{end}}
     </section>
