--- a/requirements/project/templates/index.html
+++ b/requirements/project/templates/index.html
@@ -62,7 +62,7 @@
   </header>
   {{if not .Authenticated}}
   <section class="hero">
-    <h1 class="hero__title">Welcome to the {{.Filter}} Forum</h1>
+    <h1 class="hero__title">Welcome to the <span class="highlight">{{.Filter}}</span> Forum</h1>
     <p class="hero__description">Join the conversation. Share your thoughts. Discover amazing </br>discussions from our
       vibrant community.</p>
     <div class="hero__cta">
