--- a/requirements/project/templates/post_component.html
+++ b/requirements/project/templates/post_component.html
@@ -20,7 +20,7 @@
         <h2>{{.Title}}</h2>
       </div>
       <section>
-        <p>{{.Content}}</p>
+        <p class="clamp">{{.Content}}</p>
       </section>
     </div>
     <div class="bottom">
