--- a/requirements/project/static/css/index.css
+++ b/requirements/project/static/css/index.css
@@ -2,7 +2,7 @@
   --main-color: #0f172a;
   --border-color: #e4e7ea;
   --icons-color: #748093;
-  --accent-color: #00AEFF;
+  --accent-color: #00aeff;
   --font-heading: "Unbounded", sans-serif;
   --font-body: "Archivo", sans-serif;
 }
@@ -12,9 +12,9 @@
   margin: 0;
   padding: 0;
 }
-a{
-    text-decoration: none;
-    color: inherit;
+a {
+  text-decoration: none;
+  color: inherit;
 }
 body {
   font-family: "Inter", sans-serif;
@@ -82,13 +82,16 @@ header .header__logo {
   margin-bottom: 30px;
   overflow: hidden;
   background-image: url("/static/svg/bg-grid.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }
 .hero__title {
   font-size: 2.5rem;
   max-width: 50%;
   color: var(--main-color);
   text-align: center;
-  font-family: var(--font-heading,monospace);
+  font-family: var(--font-heading, monospace);
 }
 .hero__description {
   text-align: center;
@@ -122,104 +125,108 @@ header .header__logo {
 }
 
 /*Main Section CSS*/
-.main-content{
-    max-width: 80svw;
-    margin: auto;
+.main-content {
+  max-width: 80svw;
+  margin: auto;
 }
-.main-content__filter-title{
-    font-size: 1.5rem;
-    margin-block: 20px;
-    color: var(--main-color);
-    margin-bottom: 20px;
-    text-align: center;
-    width: 100%;
+.main-content__filter-title {
+  font-size: 1.5rem;
+  margin-block: 20px;
+  color: var(--main-color);
+  margin-bottom: 20px;
+  text-align: center;
+  width: 100%;
 }
-.main-content__posts{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 30px;
-    justify-content: space-between;
+.main-content__posts {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 30px;
+  justify-content: space-between;
 }
-.main-content__posts .container{
-    background-color: #ffffff;
-    border: solid 1px var(--border-color);
-    border-radius: 12px;
-    padding: 20px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: calc(40svw - 15px);
-    display: flex;
+.main-content__posts .container {
+  background-color: #ffffff;
+  border: solid 1px var(--border-color);
+  border-radius: 12px;
+  padding: 20px;
+  width: calc(40svw - 15px);
+  display: flex;
 }
-.container .post{
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-    justify-content: space-between;
+.container .post {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  justify-content: space-between;
+  width: 100%;
 }
-.post .initial{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    text-decoration: none;
-    background-color: #F2F5F9;
-    padding: 10px;
-    width: 70px;
-    height: 70px;
-    border-radius: 50%;
-    font-family: monospace;
-    color: var(--main-color);
-    font-size: 1.3rem;
-    text-transform: uppercase;
+.post .initial {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
+  background-color: #eaf8ff;
+  font-weight: 600;
+  color: var(--accent-color);
+  font-family: var(--font-heading, monospace);
+  border: solid 1px var(--accent-color);
+  padding: 10px;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  font-size: 1.3rem;
+  text-transform: uppercase;
 }
-.user_container{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
+.user_container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
 }
-.likes_dislikes_comment{
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    padding-top: 20px;
-    gap: 10px;
+.likes_dislikes_comment {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding-top: 20px;
+  gap: 10px;
 }
-.likebtn, .dislikebtn{
-    background-color: transparent;
-    border: none;
-    outline: none;
-    cursor: pointer;
-    padding: 0;
-    margin: 0;
+.likebtn,
+.dislikebtn {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 0;
+  margin: 0;
 }
-.likebtn:hover, .dislikebtn:hover{
-    scale: 1.1;
-    transition: all 0.3s ease-in-out;
+.likebtn:hover,
+.dislikebtn:hover {
+  scale: 1.1;
+  transition: all 0.3s ease-in-out;
 }
-.divider{
-    display: block;
-    width: 100%;
-    height: 1px;
-    background-color: var(--main-color);
-    margin-block: 10px;
-    opacity: 0.2;
+.divider {
+  display: block;
+  width: 100%;
+  height: 1px;
+  background-color: var(--main-color);
+  margin-block: 10px;
+  opacity: 0.2;
 }
-.categories{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    row-gap: 10px;
-    column-gap: 10px;
-    margin-top: 10px;
+.categories {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  row-gap: 10px;
+  column-gap: 10px;
+  margin-top: 10px;
 }
-.category{
-    display: inline-block;
-    background-color: #F2F5F9;
-    padding: 5px 10px;
-    margin-top: 6px;
-    border-radius: 20px;
-    color: var(--main-color);
-    font-size: 0.9rem;
+.category {
+  display: inline-block;
+  background-color: #f3fafd;
+  padding: 5px 15px;
+  margin-top: 6px;
+  border-radius: 20px;
+  color: var(--main-color);
+  font-size: 0.9rem;
 }
 .clamp {
   display: -webkit-box;
@@ -228,6 +235,60 @@ header .header__logo {
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
-.highlight{
-    color: var(--accent-color);
+.highlight {
+  color: var(--accent-color);
+}
+.postbot {
+  align-items: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.readmore#btn2 {
+  opacity: 0.4;
+  display: block;
+  text-decoration: none;
+  padding: 8px 30px;
+  color: var(--main-color);
+  border: solid 2px var(--main-color);
+  background-color: transparent;
+  border-radius: 5px;
+  transition: opacity 0.3s ease-in-out;
+}
+.readmore#btn2:hover {
+  opacity: 1;
+}
+.footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  padding: 40px;
+  border-radius: 12px;
+  background-color: #ffffff;
+  border: solid 1px var(--border-color);
+  max-width: 80svw;
+  margin: auto;
+  height: 8svh;
+  margin-block: 20px;
+}
+.pagination {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 40px;
+  border-radius: 12px;
+  background-color: #ffffff;
+  border: solid 1px var(--border-color);
+  max-width: 80svw;
+  margin: auto;
+  height: 8svh;
+  margin-block: 20px;
+}
+.pagination__link{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
 }
