--- a/requirements/project/templates/register.html
+++ b/requirements/project/templates/register.html
@@ -10,10 +10,11 @@
 </head>
 
 <body>
-
-    <header class="nav">
-        <div id="project_header">
-            <h1><a href="/">FORUM</a></h1>
+    <header class="header">
+        <div class="header__logo">
+          <a href="/" class="header__logo-link">
+            <img src="/static/svg/logo.svg" alt="Logo" class="header__logo-img" />
+          </a>
         </div>
     </header>
 
@@ -22,7 +23,7 @@
         {{.Message}}
     </div>
     {{end}}
-    <div class="form-container">
+    <div class="form-cont">
         <h1>Register</h1>
         <form action="/register" method="POST">
             <input type="text" id="username" name="username" minlength="3" maxlength="32" placeholder="User Name"
@@ -37,11 +38,13 @@
         <p>Already have an account? <a href="/login">Login here</a>.</p>
     </div>
 
-    <footer>
-        <div class="footer-container">
-            <p>&copy; 2025 FORUM — Built with ❤️ by the Forum Team</p>
+    <footer class="footer">
+        <div class="footer__container">
+          <p class="footer__text">
+            &copy; 2025 FORUM — Built with ❤️ by the Forum Team
+          </p>
         </div>
-    </footer>
+      </footer>
 </body>
 
 </html>
